# fullstack-rust

./: .gitignore  Dockerfile  TODO.md  docker-compose.yaml  fly.toml  readme.md
api_interfaces/src/routes/: contact.rs
backend/: Cargo.toml  playground.http
backend/src/: main.rs
backend/src/routes/: contact.rs
backend/src/services/: cf_site_verify.rs  email.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend-leptos/: index.html
frontend-leptos/src/: main.rs
frontend-leptos/static/: tailwind.css
frontend/src/: main.rs
frontend/src/components/: email-form.component.rs  email_form.rs  header.rs  mod.rs  toast.rs
frontend/static/: tailwind.css
