[package]
name = "guy-site"
version = "0.1.0"
edition = "2021"

[package.metadata.commands]
build-release-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css --minify"
build-css = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./static/tailwind.css"

prebuild-dev = "cargo cmd build-css"
build-dev = "trunk build"

preserve = "cargo cmd build-css"
serve = "trunk serve"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
serde_json = "1.0.81"
serde = { version = "1.0.37", features = ["derive"]}
js-sys = "0.3"
web-sys = "0.3.58"
